updates to pictures and HTML lines

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@
   
   .hero-banner {
     background: rgb(68, 88, 120);
-    background-image: url("../images/02-hero-bg.jpg"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
+    background-image: url(https://t4.ftcdn.net/jpg/02/70/06/75/360_F_270067508_fNApbiIHDV11l5iIkWQeh6uOvh4fTely.jpg), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
     background-size: cover;
     background-position: center;
     background-blend-mode: soft-light;
@@ -217,7 +217,7 @@
   /* portfolio project images */
   /* TODO: Add portfolio project images here using background images*/
   .run-buddy {
-    
+    background-image: url("C:\Users\tieca\Bootcamp\homework\Portfolio\assets\images\Eagle background.jpg");
   }
   
   .led-wall {
