--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,31 +219,46 @@
   .run-buddy {
     background-image: url("https://t4.ftcdn.net/jpg/08/08/48/29/360_F_808482917_Cmbbt9IdsU2YTGZxiz59o9kENuueVv1C.jpg");
     background-position: center;
-    background-size: cover;   
+    background-size: cover;  
+    width: 100%;
+    height: 100px;
+    background-repeat: no-repeat; 
   }
   
   .led-wall {
     background-image: url("https://t4.ftcdn.net/jpg/04/61/47/03/360_F_461470323_6TMQSkCCs9XQoTtyer8VCsFypxwRiDGU.jpg");
     background-position: center;
-    background-size: cover;    
+    background-size: cover; 
+    width: 100%;
+    height: 100px;
+    background-repeat: no-repeat;    
   }
   
   .react-calc {
     background-image: url("https://virtualbackgrounds.site/wp-content/uploads/2020/08/the-matrix-digital-rain-768x432.jpg");
     background-position: center;
-    background-size: cover;    
+    background-size: cover; 
+    width: 100%;
+    height: 100px;
+    background-repeat: no-repeat;    
   }
   
   .pastel-puzzles {
     background-image: url("https://wallpapercave.com/wp/wp5318314.jpg");
     background-position: center;
-    background-size: cover;    
+    background-size: cover;
+    width: 100%;
+    height: 100px;
+    background-repeat: no-repeat;     
   }
   
   .surf-report {
     background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/1400/811df747792661.58858067f39ac.jpg");
     background-position: center;
-    background-size: cover;    
+    background-size: cover; 
+    width: 100%;
+    height: 100px;
+    background-repeat: no-repeat;    
   }
   
   /* media queries */
